examples/test/testpolicy2737.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2737
  namespace: namespace433
spec:
  podSelector:
    matchLabels:
      key11: value14
      key45: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value22
          key25: value9
          key26: value48
      podSelector:
        matchLabels:
          key0: value16
          key46: value31
          key8: value18
